--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <a href="#" class="nav-logo"><img src="./logo.svg" height=50px alt=""></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Services</a>
+                    <a href="#" class="nav-link">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Blog</a>
+                    <a href="#" class="nav-link">The Team</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="#" class="nav-link">Resources</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Contact</a>
