--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
             </div>
         </nav>
 </header>
+<section>
+  <svg viewBox="0 0 960 300">
+	<symbol id="s-text">
+		<text text-anchor="middle" x="50%" y="80%">HYBRID</text>
+	</symbol>
+
+	<g class = "g-ants">
+		<use xlink:href="#s-text" class="text-copy"></use>
+		<use xlink:href="#s-text" class="text-copy"></use>
+		<use xlink:href="#s-text" class="text-copy"></use>
+		<use xlink:href="#s-text" class="text-copy"></use>
+		<use xlink:href="#s-text" class="text-copy"></use>
+	</g>
+</svg>
+</section>
 <script type="text/javascript">
   const hamburger = document.querySelector(".hamburger");
 const navMenu = document.querySelector(".nav-menu");
